--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ license = "GPL-3.0-only"
 edition = "2018"
 
 [dependencies]
+openssl = "0.10.22"
 ctrlc = "3.1.2"
 structopt = "0.2.15"
 humantime = "1.2.0"
