--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ license = "GPL-3.0-only"
 edition = "2018"
 
 [dependencies]
-openssl = "0.10.22"
+openssl = { version = "0.10.22", features = ["vendored"] }
 ctrlc = "3.1.2"
 structopt = "0.2.15"
 humantime = "1.2.0"
