--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,12 @@
 language: rust
 
+rust:
+  - stable
+  - nightly
+
+env:
+  - RUST_BACKTRACE=1
+
 script:
   - cargo build --verbose --all
   - cargo test --verbose --all
