The project supports all UNIX systems

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,12 @@ rust:
   - stable
   - nightly
 
+os:
+  - osx
+  - linux
+
 env:
   - RUST_BACKTRACE=1
 
 script:
-  - cargo build --verbose --all
   - cargo test --verbose --all
