--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ license = "GPL-3.0-only"
 edition = "2018"
 
 [dependencies]
+lazy_static = "1.3.0"
 openssl-probe = "0.1.2"
 openssl = { version = "0.10.22", features = ["vendored"] }
 ctrlc = "3.1.2"
