--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ edition = "2018"
 lazy_static = "1.3.0"
 openssl-probe = "0.1.2"
 openssl = { version = "0.10.22", features = ["vendored"] }
-ctrlc = "3.1.2"
+signal-hook = "0.1.9"
 structopt = "0.2.15"
 humantime = "1.2.0"
 time = "0.1.42"
@@ -24,3 +24,4 @@ log = "0.4.6"
 fern = { version = "0.5.8", features = ["colored"] }
 serde_json = "1.0.39"
 serde = {version = "1.0.90", features = ["derive"] }
+treexml = "0.7.0"
