--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ categories = ["command-line-utilities", "simulation", "network-programming"]
 readme = "README.md"
 license = "GPL-3.0-only"
 edition = "2018"
+exclude = ["DEMO.gif"]
 
 [dependencies]
 lazy_static = "1.3.0"
