--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,3 +26,7 @@ fern = { version = "0.5.8", features = ["colored"] }
 serde_json = "1.0.39"
 serde = {version = "1.0.90", features = ["derive"] }
 treexml = "0.7.0"
+
+[profile.release]
+opt-level = 3
+lto = true
